# tidyscript

./: CMakeLists.txt  README.md
include/: lexer.hpp  parse_exception.hpp  token.hpp
src/: lexer.cpp  parse_exception.cpp  token.cpp
src/test/: lexer_runner.cpp
